--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      javascript: (function () {
+        var script = document.createElement("script");
+        script.src = "//cdn.jsdelivr.net/npm/eruda";
+        document.body.appendChild(script);
+        script.onload = function () {
+          eruda.init();
+        };
+      })();
+    </script>
   </body>
 </html>
